fixed overlap of edit button on people

--- a/mycelium/apps/mycelium_core/static/css/people_organizations.css
+++ b/mycelium/apps/mycelium_core/static/css/people_organizations.css
@@ -22,6 +22,15 @@ fragment[name=new_person_search_results] {
 .tab_contents.organizations_people .add_person_container, .tab_contents.organizations_people #add_existing_person, .tab_contents.organizations_people #new_person, .tab_contents.organizations_people #search_for_person {
 	display: none;
 }
+.organizations_people save_status_and_button {
+	position: absolute;
+	top: -2px;
+	right: 4px;
+}
+.organizations_people .name {
+	margin-bottom: 5px;
+	font-size: 14px;
+}
 
 #add_existing_person, #new_person {
 	display: block;
